<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Registrar">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuenta"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiNombreUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/nombre_de_usuario"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiContrasena"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/white"
        android:hint="@string/contrasena"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/tiNombreUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPasswordConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/white"
        android:hint="@string/confirmar_contrasena"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/tiContrasena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCrearCuenta"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuenta"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/Celeste"
        app:layout_constraintTop_toBottomOf="@id/tiPasswordConfirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/TvTienesCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ya_tienes_una_cuenta_inicia_sesion"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/btnCrearCuenta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/iniciarConText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambien_puede_utilizar"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/TvTienesCuenta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp" />

    <LinearLayout
        android:id="@+id/socialLoginButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/iniciarConText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/facebookLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/iniciar_sesion_con_facebook"
            android:text=""
            app:icon="@drawable/ic_facebook"
            app:iconGravity="textStart"
            app:iconTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/googleLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/iniciar_sesion_con_google"
            android:text=""
            app:icon="@drawable/ic_google"
            app:iconGravity="textStart"
            app:iconTint="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
