<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".RestablecerContrasena">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/restablecer_contrasena"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiContrasenaNueva"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nueva_contrasena"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etContrasenaNueva"
            android:layout_marginHorizontal="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiConfirmarContrasena"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirmar_contrasena"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tiContrasenaNueva"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmarContrasena"
            android:layout_marginHorizontal="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReiniciar"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/Celeste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/cambiar_contrasena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiConfirmarContrasena" />

    <TextView
        android:id="@+id/TvTienesCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordaste_tu_cuenta_inicia_sesion"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/btnReiniciar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>