<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textSize="24sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_mis_puertas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mis_puertas"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linear_layout_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_mis_puertas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/boton_añadir_puerta"/>

    <Button
        android:id="@+id/boton_añadir_puerta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anadir_puerta"
        android:drawableStart="@drawable/ic_agregar"
        android:drawablePadding="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/barra_navegacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:itemIconSize="30dp"
        app:menu="@menu/menu_navegacion"
        app:labelVisibilityMode="labeled"
        android:background="@android:color/transparent"
        app:backgroundTint="@android:color/transparent"
        app:itemTextColor="@android:color/black"
        app:itemIconTint="@color/gris" />
</androidx.constraintlayout.widget.ConstraintLayout>
